--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.ojuelosdejalisco.rickyandmorty_mvvm_cleanarquitecture_sample"
+        applicationId 'com.victorescalante.rickyandmorty_mvvm_cleanarquitecture_sample'
         minSdk 21
         targetSdk 32
         versionCode 1
