--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.ojuelosdejalisco.rickyandmorty_mvvm_cleanarquitecture_sample">
+    package="com.victorescalante.rickyandmorty_mvvm_cleanarquitecture_sample">
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
